# github-copilot-upgrading

.github/workflows/: ci.yml
workshop/upgraded/: pyproject.toml
workshop/upgraded/guachi/: database.py
workshop/upgraded/guachi.egg-info/: SOURCES.txt
workshop/upgraded/guachi/guachi.egg-info/: PKG-INFO  SOURCES.txt
workshop/upgraded/guachi/tests/: test_configmapper.py  test_configurations.py  test_database.py  test_integration.py
